new> add twitter link on index

--- a/index.html
+++ b/index.html
@@ -186,6 +186,17 @@
 					</div><!--//col-->
 				</div><!--//gallery-->
 			</section>
+			<div class="callout-block callout-block-success">
+				<div class="content">
+					<h4 class="callout-title">
+						<span class="callout-icon-holder me-1">
+							<i class="fas fa-thumbs-up"></i>
+						</span><!--//icon-holder-->
+						Tip
+					</h4>
+					<p>Are you interested? Follow us on X (aka Twitter) <a class="xlink" href="#" target="_blank"><i class="fab fa-twitter fa-fw"></i></a> for the updates and staying in touch.</p>
+				</div><!--//content-->
+			</div><!--//callout-block-->
 		</div><!--//container-->
     </div><!--//page-content-->
 
