fix> use existing url in navigateTo/url action examples

--- a/docs-page.html
+++ b/docs-page.html
@@ -885,10 +885,10 @@ Syntax:
 <span class="action">navigateTo</span> <span class="args">args:</span>"HTTP ADDRESS"
 
 Named parameters example:
-<span class="action">navigateTo</span> <span class="args">args:</span>"http://doozer.softtest.dev/firstscript"
+<span class="action">navigateTo</span> <span class="args">args:</span>"http://doozer.softtest.dev
 
 Position based parameters example:
-<span class="action">navigateTo</span> "" "http://doozer.softtest.dev/firstscript"</code></pre>
+<span class="action">navigateTo</span> "" "http://doozer.softtest.dev"</code></pre>
 									</div><!--//docs-code-block-->
 								</li>
 								<li><span class="green-font">refresh</span> - reloads current page.
@@ -912,10 +912,10 @@ Syntax:
 <span class="action">url</span> <span class="args">args:</span>"HTTP ADDRESS"
 
 Named parameters example:
-<span class="action">url</span> <span class="args">args:</span>"http://doozer.softtest.dev/firstscript"
+<span class="action">url</span> <span class="args">args:</span>"http://doozer.softtest.dev"
 
 Position based parameters example:
-<span class="action">url</span> "" "http://doozer.softtest.dev/firstscript"</code></pre>
+<span class="action">url</span> "" "http://doozer.softtest.dev"</code></pre>
 									</div><!--//docs-code-block-->
 								</li>
 							</ul>
