new> add explicit twitter links

--- a/docs-page.html
+++ b/docs-page.html
@@ -610,7 +610,7 @@ touch src/test/java/com/mycompany/app/scripts/screenshotTest/screenshotTest.dooz
 							</ol>
 							That's all! You've just learnt how to deal with the screenshots, how to
 							update the golden files, and how to review the results. Hope you've liked
-							this codelab, if you have questions feel free to DM us on X (Twitter).
+							this codelab, if you have questions feel free to DM us on X (Twitter) <a class="xlink" href="#" target="_blank">x.com/softtest_dev <i class="fab fa-twitter fa-fw"></i></a>.
 						</p>
 					</section><!--//section-->
 					
