--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
 						</span><!--//icon-holder-->
 						Tip
 					</h4>
-					<p>Are you interested? Follow us on X (aka Twitter) <a class="xlink" href="#" target="_blank"><i class="fab fa-twitter fa-fw"></i></a> for the updates and staying in touch.</p>
+					<p>Are you interested? Follow us on X (aka Twitter) <a class="xlink" href="#" target="_blank">x.com/softtest_dev <i class="fab fa-twitter fa-fw"></i></a> for the updates and staying in touch.</p>
 				</div><!--//content-->
 			</div><!--//callout-block-->
 		</div><!--//container-->
